# rgel

./: .gitignore  LICENSE  dune-project  rgel.opam  runtests.rb  testrunner.rb
examples/: basics.rgel  qjs.rgel
lib/: codegen.ml  codegen.mli  debug.mli  dune  env.ml  env.mli  errors.ml  errors.mli  grammar.mly  lexer.mll  location.ml  location.mli  parsed_ast.ml  type_check.ml  type_check.mli  types.ml
lib/backend/: codegen.ml  codegen.mli
lib/common/: debug.ml  errors.ml  errors.mli  location.ml
lib/frontend/: dune  lexer.mll
lib/middle/: env.ml  env.mli  type_check.ml  type_check.mli  type_common.ml  type_loader.ml  type_loader.mli  typed_ast.ml  types.ml
support/: build.sh  index.js  package-lock.json  package.json
test/: basics.rgel  dune
test/ffi/: poly.rgel
test/primitive/: add.rgel
test/types/: mismatch-error.rgel
tests/: defs.t  dune  ffi.t  primitives.t  records.t  types.t
tests/defs/: basics.rgel  notfound-error.rgel  ret-error.rgel
tests/ffi/: poly.rgel  simple.rgel
tests/primitive/: add.rgel  maths.rgel
tests/records/: fields1-error.rgel  methods1.rgel  rec1.rgel
tests/types/: mismatch-error.rgel  rec2-error.rgel
