(lang dune 3.17)

(name rgel)

(generate_opam_files true)

(source
 (github rawburt/rgel))

(authors "Robert Peterson <me@robertp.me>")

(maintainers "Robert Peterson <me@robertp.me>")

(license LICENSE)

(package
 (name rgel)
 (synopsis "Robert's game engine language")
 (description "Robert's game engine language")
 (depends ocaml))
